# game

./: .gitignore  README.md  code.py  msgpack.pyi  profile.stats  pyproject.toml
.superpowers/brainstorm/12428-1781180689/content/: animations.html  font-pick.html  full-mockup.html  visual-direction.html  waiting.html
.superpowers/brainstorm/12428-1781180689/state/: server-stopped
docs/: client-guide.md
docs/superpowers/plans/: 2026-06-11-neon-cyber-redesign.md
docs/superpowers/specs/: 2026-06-11-neon-cyber-redesign.md
scripts/: bot_swarm.py  load_test.py
src/: __init__.py  config.py
src/core/: checksum.py  command_log.py  commands.py  types.py
src/ecs/: __init__.py  component_array.py  component_manager.py  coordinator.py  entity.py  managers.py  signature.py  system.py  system_manager.py  types.py
src/game/: __init__.py  bootstrap.py  collision.py  components.py  loop.py  protocol.py  registry.py  simulation.py  world.py
src/game/components/: __init__.py  base.py
src/game/subscribers/: teleport.py
src/game/systems/: __init__.py  command.py  movement.py  trigger.py
src/network/: __init__.py
src/rts_engine/: config.py
src/rts_engine/core/: __init__.py  checksum.py  command_log.py  commands.py  types.py
src/rts_engine/network/: protocol.py
src/rts_engine/server/: match.py  websocket_server.py
src/rts_engine/simulation/: __init__.py  engine.py  world.py
src/rts_engine/simulation/systems/: __init__.py  command.py  movement.py
src/server/: __init__.py  __main__.py  match.py  protocol.py  server.py  websocket_server.py
tests/: conftest.py  test_determinism.py  test_ecs.py  test_match_coordinator.py  test_protocol.py  test_replay.py  test_token_auth.py
web/: index.html
web/client/: app.js  collision.js  constants.js  input.js  map.js  protocol.js  render.js  simulation.js  triggers.js  ui.js
web/client/subscribers/: spawn.js  teleport.js
