[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "rts-engine"
version = "0.1.0"
description = "Pure Python deterministic lockstep RTS engine prototype"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "msgpack>=1.0.8",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "mypy>=2.1.0",

]

[project.scripts]
rts-server = "rts_engine.server.websocket_server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.15",
]
