[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "rts-engine"
version = "0.1.0"
description = "Pure Python deterministic lockstep RTS engine prototype"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "esper>=3.0",
    "msgpack>=1.0.8",
    "uvloop>=0.22.1",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "mypy>=2.1.0",

]

[project.scripts]
server = "server.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "ruff>=0.15.15",
]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
explicit_package_bases = true
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
